# video-service

./: .env  .gitignore  Dockerfile  README.md  deploy_server.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_google.yml  deploy_server.yml  test.yml
tests/: conftest.py
tests/integration/: __init__.py
video-streaming/: .gitignore  COMPARISON.md  README.md  SETUP.md  __init__.py  requirements.txt  ruff.toml
video-streaming/adapters/: __init__.py  live_stream_adapter.py
video-streaming/config/: livestream_settings.json
video-streaming/examples/: __init__.py  basic_usage.py  integration_example.py
video-streaming/services/: __init__.py  live_stream_service.py
video_service/: app.py
video_service/adapters/: __init__.py  config_adapter.py  events_adapter.py  gcs_lock_adapter.py  google_cloud_storage_adapter.py  live_stream_adapter.py  photos_file_adapter.py  service_instance_adapter.py  status_adapter.py  user_adapter.py
video_service/config/: global_settings.json
video_service/files/: info.txt
video_service/services/: __init__.py  live_stream_service.py  video_service.py  vision_ai_service.py
video_service/srt_streaming/: README.md  setup.md
