[project]
description = "A tool to analyse video stream and detect people crossing line."
license = "Apache-2.0"
name = "video-service"
readme = "README.md"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.12.15",
    "certifi>=2025.8.3",
    "google-cloud-storage>=3.1.0",
    "multidict>=6.1.0",
    "opencv-python>=4.11.0.86",
    "ultralytics==8.3.204",
    "python-dotenv>=1.2.1",
    "tzdata>=2025.3",
    "google-cloud-video-live-stream>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pip-audit>=2.7.3",
    "deptry>=0.21.2",
    "poethepoet>=0.37.0",
    "ruff>=0.13.2",
    "pyright>=1.1.405",
]

[tool.poe.tasks]
fmt = "uv run ruff format"
lint = "uv run ruff check --fix"
pyright = "uv run pyright"
check_deps = { cmd = "uv run deptry ." }
audit = { cmd = "uv run pip-audit" }
unit-tests = "uv run pytest -m unit"
integration-tests = "uv run pytest --cov=user_service --cov-report=term-missing -m integration"
contract-tests = "uv run pytest -m contract"
release = [
    "lint",
    "check_deps",
    "pyright",
    "audit",
]


[tool.ruff.lint]
select = ["ALL"]
# and then manually ignore annoying ones:
ignore = [
    "ANN401", # Any should be allowed
    "ASYNC230",
    "BLE001",
    "D211",
    "D213",
    "COM812",
    "D203",
    "E501",
    "EM102",
    "F401",
    "G004",
    "ISC001",
    "LOG015",
    "PLR0913",
    "SIM102",
    "TRY002",
    "TRY301",
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    #     "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    #     "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["user_service"]

[tool.pyright]
venvPath = "." # rye installs the venv in the current dir
venv = ".venv" #       in a folder called `.venv`
#strict = ["**/*.py"] # use 'strict' checking on all files

[tool.deptry]
ignore_notebooks = true
known_first_party = ["video_service"]

[tool.deptry.per_rule_ignores]
DEP002 = ["aiodns", "certifi", "PyJWT", "tzdata"]
DEP003 = ["numpy", "torch"]


[tool.pytest.ini_options]
env = [
    "CONFIG=test",
    "JWT_SECRET=secret",
    "ADMIN_USERNAME=admin",
    "ADMIN_PASSWORD=password",
    "JWT_EXP_DELTA_SECONDS=60",
    "JWT_SECRET=secret",
    "LOGGING_LEVEL=INFO",
]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit",
    "integration: marks tests as integration",
    "contract: marks tests as contract",
]

[tool.coverage.paths]
source = ["video_service", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*unnga.py"]
source = ["video_service"]

[tool.coverage.report]
fail_under = 10
show_missing = true
